--- a/main.html
+++ b/main.html
@@ -15,8 +15,7 @@
             <div class="links">
                 <ul>
                     <li><a href="main.html">Home</a></li>
-                    <li><a href="Budget.html">Budget</a></li>
-                    <li><a href="rewards.html">Rewards</a></li>
+                    <li><a href="Budget.html">Budget & Rewards </a></li>
                 </ul>
             </div>
         </div>
